# online_store

./: .env_sample  products.json  pyproject.toml
catalog/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0002_product_manufactured_at.py  0003_blogpost.py  0004_alter_blogpost_slug.py  0005_alter_blogpost_slug.py  0006_version.py  0007_product_owner.py  0008_alter_product_options_product_is_published.py  0009_blogpost_author.py
catalog/templates/: base.html  contacts.html  create_product.html  home.html  product_detail.html  product_list.html  products_details.html  products_list.html
catalog/templates/catalog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  contacts.html  create_product.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/utils/: congratulate_by_mail.py
config/: settings.py  urls.py
fixtures/: categories.json  groups.json  moderator_group.json  products.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: new_password.html  user_confirm_delete.html  user_form.html  user_profile.html
