[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Alexander Gedz <gedz.buh@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
black = "^24.4.2"
shell = "^1.0.1"
ipython = "^8.24.0"
django-autoslug = "^1.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
